force-app/main/default/objects/Documentation__c/Documentation__c.object-meta.xml
<CustomObject>
    <description
  >Documentation records — Technical (for admins/devs) and User (for end users). Linked to Work Items and Change Logs.</description>
    <label>Documentation</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>