force-app/main/default/objects/Documentation__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The full content of this document, written in rich text. For Technical docs: API refs, code snippets, configuration steps. For User docs: plain-language feature descriptions and how-to guidance.</description>
    <inlineHelpText>Write the document content here. Use headings, bullet points, and code blocks to structure information clearly.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>