force-app/main/default/objects/Documentation__c/fields/Claude_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>Claude_Doc_Id__c</fullName>
    <description>Stable external identifier used by Claude Code to locate this documentation record without hard-coding a Salesforce record ID. Format: kebab-case slug, e.g. project-management-technical.</description>
    <externalId>true</externalId>
    <label>Claude Doc ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>