force-app/main/default/objects/Documentation__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Folder</label>
    <referenceTo>Folder__c</referenceTo>
    <relationshipLabel>Documentation</relationshipLabel>
    <relationshipName>Documentation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>