force-app/main/default/objects/Documentation__c/fields/Related_Technical_Doc__c.field-meta.xml
<CustomField>
    <fullName>Related_Technical_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For User docs: the companion Technical document that covers the same feature with full implementation detail. Enables navigation between the two audiences.</description>
    <inlineHelpText>Link to the Technical documentation record that covers the same feature as this User doc.</inlineHelpText>
    <label>Related Technical Doc</label>
    <referenceTo>Documentation__c</referenceTo>
    <relationshipLabel>User Docs (Technical Doc)</relationshipLabel>
    <relationshipName>User_Docs_Technical_Doc</relationshipName>
    <type>Lookup</type>
</CustomField>