force-app/main/default/objects/Documentation__c/fields/Related_User_Doc__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Technical docs: the companion User-facing document that explains the same feature in plain language. Enables navigation between the two audiences.</description>
    <inlineHelpText>Link to the User documentation record that covers the same feature as this Technical doc.</inlineHelpText>
    <label>Related User Doc</label>
    <referenceTo>Documentation__c</referenceTo>
    <relationshipLabel>Technical Docs (User Doc)</relationshipLabel>
    <relationshipName>Technical_Docs_User_Doc</relationshipName>
    <type>Lookup</type>
</CustomField>