force-app/main/default/objects/Documentation__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The Work Item (Story, Task, Bug, etc.) that this document is primarily associated with. A Work Item may have multiple Documentation records.</description>
    <inlineHelpText
  >Link to the Work Item this document describes or was produced by.</inlineHelpText>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Documentation</relationshipLabel>
    <relationshipName>Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>