force-app/main/default/objects/Documentation__c/recordTypes/Technical.recordType-meta.xml
<RecordType>
    <fullName>Technical</fullName>
    <active>true</active>
    <description
  >Technical documentation for Salesforce admins, developers, and architects. Covers API references, configuration steps, data model decisions, and implementation detail.</description>
    <label>Technical</label>
</RecordType>