force-app/main/default/objects/Documentation__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <description>End-user documentation for Salesforce users who work in the app but do not configure or develop it. Plain-language feature guides, how-tos, and FAQs.</description>
    <label>User</label>
</RecordType>