force-app/main/default/objects/Documentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Work_Item__c</columns>
    <columns>Related_Technical_Doc__c</columns>
    <columns>Related_User_Doc__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>