force-app/main/default/objects/Documentation__c/listViews/Technical.listView-meta.xml
<ListView>
    <fullName>Technical</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Documentation__c.Technical</value>
    </filters>
    <label>Technical</label>
</ListView>