force-app/main/default/objects/Documentation__c/listViews/User.listView-meta.xml
<ListView>
    <fullName>User</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Documentation__c.User</value>
    </filters>
    <label>User</label>
</ListView>